editor/inspector/contributions/asset.css
:host {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

:host > .container {
    display: flex;
    flex: 1;
    flex-direction: column;
    overflow: hidden;
}

:host > .container[whole] {
    max-height: 100%;
}

:host > .container > .header {
    display: flex;
    flex: 1;
}

:host > .container > .header > .icon {
    width: 16px;
    font-size: 12px;
    cursor: pointer;
}

:host > .container > .header > .image {
    width: 20px;
    height: 20px;
    margin-top: 2px;
    cursor: pointer;
}

:host > .container > .header > .icon:hover,
:host > .container > .header > .image:hover {
    opacity: 0.8;
}

:host > .container > .header > .name {
    flex: 1;
    padding-left: 4px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    cursor: default;
}

:host > .container > .header > .name[readonly] {
    opacity: 0.55;
}

:host > .container > .header > .copy {
    margin-left: 5px;
    line-height: 26px;
}

:host > .container > .header > .help {
    display: none;
    margin-left: 8px;
    margin-right: 3px;
}

:host > .container > .header > .lock {
    display: none;
    font-size: 16px;
    color: var(--color-focus-contrast-normal);
    margin-left: 4px;
    margin-right: 10px;
    cursor: pointer;
}

:host > .container > .header > .tiny {
    display: none;
    padding: 0 4px;
    height: 20px;
    line-height: 20px;
    margin-left: 8px;
    margin-top: 2px;
}

:host > .container > .header[dirty] > .tiny {
    display: inline-block;
}

:host > .container > .content {
    display: flex;
    padding-top: 5px;
    flex: 1;
    min-height: 0;
    flex-direction: column;
}

:host > .container > .content > section {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

:host > .container > .content > .content-section {
    flex: 1;
    overflow: scroll;
}

:host > .container > .content > section > ui-panel {
    display: flex;
    flex-direction: column;
}

:host > .container > .content > section > ui-panel:only-child {
    flex: 1;
    min-height: 0;
}

:host([sub-type="material"]) > .container > .content,
:host([sub-type="gltf-material"]) > .container > .content {
    padding-top: 0;
}

:host([sub-type="material"]) > .container > .content > .content-header,
:host([sub-type="gltf-material"]) > .container > .content > .content-header {
    position: sticky;
    left: 0;
    top: 0;
    z-index: 1;
}

